--- a/deny.toml
+++ b/deny.toml
@@ -90,8 +90,8 @@ ignore = [
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
 allow = [
     "MIT",
-    # "Apache-2.0",
-    # "Unicode-DFS-2016",
+    "Apache-2.0",
+    "Unicode-DFS-2016",
     # "MPL-2.0",
     # "BSD-2-Clause",
     # "BSD-3-Clause",
