--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ proc-macro = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 #
 [dependencies]
+darling = "0.20.10"
 proc-macro2 = "1.0.89"
 quote = "1.0.37"
 syn = { version = "2.0.87", features = ["extra-traits"] }
